--- a/public/css/favoritos.css
+++ b/public/css/favoritos.css
@@ -270,12 +270,12 @@ nav {
 .categoria {
     background: #333578;
     display: flex;
-    flex-direction: initial;
-    align-items: end;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-around;
     /* text-align: justify; */
     color: #fff;
-    gap: 10px; 
+    /* gap: 10px;  */
     /* transition: transform 0.3s; */
     padding: 10px;
     padding-right: 300px;
