--- a/public/css/desarrollo.css
+++ b/public/css/desarrollo.css
@@ -270,16 +270,12 @@ nav {
 .categoria {
     background: #333578;
     display: flex;
-    flex-direction: initial;
-    align-items: end;
-    justify-content: space-around;
-    /* text-align: justify; */
+    align-items: center;
+    justify-content: center; /* centra imagen y texto */
+    text-align: center;
     color: #fff;
-    gap: 10px; 
-    /* transition: transform 0.3s; */
-    padding: 10px;
-    padding-right: 300px;
-    /* cursor: pointer; */
+    gap: 15px; /* espacio entre imagen y texto */
+    padding: 10px 20px; /* margen interno equilibrado */
     border-radius: 14px;
 }
 
