--- a/public/css/literatura.css
+++ b/public/css/literatura.css
@@ -266,22 +266,18 @@ nav {
     padding: 25px;
     border-radius: 24px;
 }
-
 .categoria {
     background: #333578;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    text-align: justify;
+    justify-content: center; /* centra imagen y texto */
+    text-align: center;
     color: #fff;
-    gap: 10px; 
-    /* transition: transform 0.3s; */
-    padding: 10px;
-    padding-right: 300px;
-    /* cursor: pointer; */
+    gap: 15px; /* espacio entre imagen y texto */
+    padding: 10px 20px; /* margen interno equilibrado */
     border-radius: 14px;
 }
+
 
 /* .categoria:hover {
   transform: scale(1.05); 
